<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.MainActivity">
    <item
        android:id="@+id/opcionAdmEmpresas"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcionExportarBD"
        android:orderInCategory="101"
        android:title="@string/opcionExportarBD"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcionImportarBD"
        android:orderInCategory="102"
        android:title="@string/opcionImportarBD"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionSearch"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/hintBuscar"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>
</menu>
