<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblCalificacion"
        android:id="@+id/lblCalificacion"
        android:layout_marginTop="22dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtExcelente"
            android:id="@+id/rbtExcelente" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtBueno"
            android:id="@+id/rbtBueno" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtRegular"
            android:id="@+id/rbtRegular" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtMalo"
            android:id="@+id/rbtMalo" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblObservaciones"
        android:id="@+id/lblObservaciones"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtObservaciones"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textCapSentences|textMultiLine" />
</LinearLayout>