<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.AddNewActivity"
    android:gravity="fill">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cmbEmpresa"
        android:layout_below="@+id/lblEmpresa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_toStartOf="@+id/cmdAgregarEmpresa"
        android:layout_toLeftOf="@+id/cmdAgregarEmpresa"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblEmpresa"
        android:id="@+id/lblEmpresa"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblNumeroBondi"
        android:id="@+id/lblNroBondi"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/cmbEmpresa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtNroBondi"
        android:layout_below="@+id/lblNroBondi"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblCalificacion"
        android:id="@+id/lblCalificacion"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/txtNroBondi"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblCalificacion"
        android:layout_marginTop="22dp"
        android:id="@+id/rbtGrupo"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtExcelente"
            android:id="@+id/rbtExcelente" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtBueno"
            android:id="@+id/rbtBueno" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtRegular"
            android:id="@+id/rbtRegular" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtMalo"
            android:id="@+id/rbtMalo" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblObservaciones"
        android:id="@+id/lblObservaciones"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/rbtGrupo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textMultiLine"
        android:ems="10"
        android:id="@+id/txtObservaciones"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblObservaciones"
        android:layout_alignParentLeft="true" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cmdCancelar"
        android:id="@+id/cmdCancelar"
        android:layout_alignTop="@+id/cmdGuardar"
        android:layout_toLeftOf="@+id/cmdGuardar"
        android:layout_toStartOf="@+id/cmdGuardar" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cmdGuardar"
        android:id="@+id/cmdGuardar"
        android:layout_below="@+id/txtObservaciones"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cmdAgregarEmpresa"
        android:drawableLeft="@drawable/ic_add_black_24dp1"
        android:contextClickable="true"
        android:layout_alignTop="@+id/cmbEmpresa"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
